  -  Improvements to language fiels (BenBE)
     * Fixed broken links in R/S+ language file (BenBE)
     * Fixed an issue with if= argument for dd command (BenBE)
     * T-SQL should use GESHI_CAPS_NO_CHANGE for keywords (BenBE)
     * Fixed missed shorthand arg references in Bash (BenBE)
     * Fixed first line not getting highlighted in diff language (BenBE)
Version 1.0.8.5
  -  Added language files
     * AutoHotkey (Naveen Garg)
     * Awk (George Pollard)
     * GADV 4CS (Jason Curl)
     * jQuery (Rob Loach)
     * PowerBuilder (Doug Porter)
     * PureBasic (Gustavo Julio Fiorenza)
     * R / S+ (Ron Fredericks, Benilton Carvalho)
  -  Fixed legitimate numbers sometimes missing from highlighting (BenBE)
  -  Fixed a problem with URLs allowing to break highlighting (BenBE)
  -  Allowed for String and Number Styles to be set by the API (BenBE)
  -  Produce valid CSS when languages start with underscore (BenBE)
  -  Duplicate newlines with PRE_TABLE-Header but w/o linenumbers (SF#2838958, BenBE)
  -  Improvements to language files (BenBE)
     * Fixed case-insensitively duplicate keywords (BenBE)
     * DCS language file contained HARDQUOTE section but no hardquotes (BenBE)
     * Some additional headers for Email\mbox highlighting (BenBE)
     * Added some more Keywords for robots.txt highlighting (BenBE)
     * Added Git commands for bash, ifup/ifdown (BenBE)
     * Added support for C# and VB.net delegates (SF#2832253, BenBE)
     * Added support for line numbers, file handles and hex\octal numbers for QBasic (BenBE)
Version 1.0.8.4
  -  Added language files
     * BibTeX (Quinn Taylor)
     * CMake (Daniel Nelson)
     * Erlang (Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim)
     * FO (abas-ERP) (Tan-Vinh Nguyen)
     * Property Files (Edy Hinzen)
     * Whois (RPSL format) entries (Benny Baumann)
  -  Changed INT_BASIC number format to allow numbers followed . at EOL (BenBE)
  -  Higher prority for keywords over regexps (BenBE)