@@ -3,16 +3,19 @@
  * csharp.php
  * ----------
  * Author: Alan Juden (alan@judenware.org)
+ * Revised by: Michael Mol (mikemol@gmail.com)
  * Copyright: (c) 2004 Alan Juden, Nigel McNie (http://qbnz.com/highlighter/)
- * Release Version: 1.0.8.5
+ * Release Version: 1.0.8.6
  * Date Started: 2004/06/04
  *
  * C# language file for GeSHi.
  *
  * CHANGES
  * -------
+ * 2009/04/03 (1.0.8.6)
+ *  -  Added missing keywords identified by Rosetta Code users.
  * 2008/05/25 (1.0.7.22)
- *   -  Added highlighting of using and namespace directives as non-OOP
+ *  -  Added highlighting of using and namespace directives as non-OOP
  * 2005/01/05 (1.0.1)
  *  -  Used hardquote support for @"..." strings (Cliff Stanford)
  * 2004/11/27 (1.0.0)
@@ -59,12 +62,12 @@ $language_data = array (
         1 => array(
             'as', 'auto', 'base', 'break', 'case', 'catch', 'const', 'continue',
             'default', 'do', 'else', 'event', 'explicit', 'extern', 'false',
-            'finally', 'fixed', 'for', 'foreach', 'goto', 'if', 'implicit',
-            'in', 'internal', 'lock', 'namespace', 'null', 'operator', 'out',
-            'override', 'params', 'partial', 'private', 'protected', 'public',
-            'readonly', 'ref', 'return', 'sealed', 'stackalloc', 'static',
-            'switch', 'this', 'throw', 'true', 'try', 'unsafe', 'using',
-            'virtual', 'while', 'yield'
+            'finally', 'fixed', 'for', 'foreach', 'from', 'goto', 'if',
+            'implicit', 'in', 'internal', 'lock', 'namespace', 'null',
+            'operator', 'out', 'override', 'params', 'partial', 'private',
+            'protected', 'public', 'readonly', 'ref', 'return', 'sealed',
+            'select', 'stackalloc', 'static', 'switch', 'this', 'throw', 'true',
+            'try', 'unsafe', 'using', 'virtual', 'where', 'while', 'yield'
             ),
         2 => array(
             '#elif', '#endif', '#endregion', '#else', '#error', '#define', '#if',
